Fix SingleResultContainer Not Centered Window SM

--- a/client/style.css
+++ b/client/style.css
@@ -36,7 +36,7 @@
         @apply bg-gray-100 dark:bg-zinc-700 text-black dark:text-white
     }
     .single-result-container {
-        @apply card py-2 px-14 sm:py-1 sm:px-8
+        @apply card py-2 px-14 sm:py-1 sm:px-8 flex justify-center
     }
 }
 
